objects/SLA_Policy__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SLA Policies</relationshipLabel>
        <relationshipName>SLA_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <label>Policy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Time_Hours__c</fullName>
        <label>Resolution Time (Hours)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SLA Policy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SLA Policy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>